[package]
name = "riscv_emu_rust"
version = "0.2.0"
description = "RISC-V emulator written in Rust"
authors = ["Takahiro <hogehoge@gachapin.jp>"]
license = "MIT"
homepage = "https://github.com/takahirox/riscv-rust"
repository = "https://github.com/takahirox/riscv-rust"
exclude = [
  "resources/*",
  "screenshots/*",
  "cli/*",
  "wasm/*"
]

[workspace]
members = [".", "lab1", "lab2"]

[badges]
travis-ci = { repository = "takahirox/riscv-rust" }

[dependencies]
fnv = "1.0.7"
lazy_static = "1.4.0"
derive_more = "0.99.0"