[package]
name = "lab1"
version = "0.1.0"
authors = ["chaoRIOS <chao.w@rioslab.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getopts = "0.2"
pancurses = "0.16.1"
riscv_emu_rust = {path = "../"}
fnv = "1.0.7"