[package]
name = "lab2"
version = "0.1.0"
authors = ["chaoRIOS <chao.w@rioslab.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
riscv_emu_rust = {path = "../", features = ["debug-dramsim"]}
lab1 = {path = "../lab1"}