[package]
name = "lab3"
version = "0.1.0"
authors = ["chaoRIOS <chao.w@rioslab.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
riscv_emu_rust = {path = "../" ,default-features = false, optional = true}

[features]
default = ["riscv_emu_rust"]
debug-disassemble = ["riscv_emu_rust","riscv_emu_rust/debug-disassemble"]
debug-register = ["riscv_emu_rust","riscv_emu_rust/debug-register"]
debug-bp = ["riscv_emu_rust","riscv_emu_rust/debug-bp"]